SERVER-7511: fix update with positional mod or index offset