src/mongo/dbtests/updatetests.cpp
@@ -2509,6 +2509,36 @@ namespace UpdateTests {
 
     };
 
+    class IndexFieldNameTest {
+    public:
+        void run() {
+            string x;
+
+            ASSERT_FALSE( getCanonicalIndexField( "a", &x ) );
+            ASSERT_FALSE( getCanonicalIndexField( "aaa", &x ) );
+            ASSERT_FALSE( getCanonicalIndexField( "a.b", &x ) );
+
+            ASSERT_TRUE( getCanonicalIndexField( "a.$", &x ) );
+            ASSERT_EQUALS( x, "a" );
+            ASSERT_TRUE( getCanonicalIndexField( "a.0", &x ) );
+            ASSERT_EQUALS( x, "a" );
+            ASSERT_TRUE( getCanonicalIndexField( "a.123", &x ) );
+            ASSERT_EQUALS( x, "a" );
+
+            ASSERT_TRUE( getCanonicalIndexField( "a.$.b", &x ) );
+            ASSERT_EQUALS( x, "a.b" );
+            ASSERT_TRUE( getCanonicalIndexField( "a.0.b", &x ) );
+            ASSERT_EQUALS( x, "a.b" );
+            ASSERT_TRUE( getCanonicalIndexField( "a.123.b", &x ) );
+            ASSERT_EQUALS( x, "a.b" );
+
+            ASSERT_FALSE( getCanonicalIndexField( "a.123a", &x ) );
+            ASSERT_FALSE( getCanonicalIndexField( "a.a123", &x ) );
+            ASSERT_FALSE( getCanonicalIndexField( "a.123a.b", &x ) );
+            ASSERT_FALSE( getCanonicalIndexField( "a.a123.b", &x ) );
+        }
+    };
+
     class All : public Suite {
     public:
         All() : Suite( "update" ) {
@@ -2676,6 +2706,8 @@ namespace UpdateTests {
             add< basic::bit1 >();
             add< basic::unset >();
             add< basic::setswitchint >();
+
+            add< IndexFieldNameTest >();
         }
     } myall;
 
